--- a/appweb/templates/computer/index.html
+++ b/appweb/templates/computer/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>云亭2.0</title>
-
-    <link href="{{ url_for('static', filename='computer/css/app.79f0eeb0b4480600d260e27ce0d53193.css') }}" rel=stylesheet>
-</head>
-<body>
-<div id=app></div>
-<script type=text/javascript src="{{ url_for('static', filename='computer/js/manifest.dad11fec3c682f8049f0.js') }}"></script>
-<script type=text/javascript src="{{ url_for('static', filename='computer/js/vendor.aa2b65d6f4254c3f19d5.js') }}"></script>
-<script type=text/javascript src="{{ url_for('static', filename='computer/js/app.76da372233af79b42f88.js') }}"></script>
-</body>
+	<head>
+		<meta charset=utf-8/>
+		<meta name=viewport content="width=device-width,initial-scale=1"/>
+		<title>
+			云亭2.0
+		</title>
+		<link href="/parking2/static/computer/css/app.39f570a9aca7a1c17d908a32ed34560b.css" rel=stylesheet/>
+	</head>
+	<body>
+		<div id=app></div>
+		<script type=text/javascript src="/parking2/static/computer/js/manifest.9ec9a47b34d7189dd491.js"></script>
+		<script type=text/javascript src="/parking2/static/computer/js/vendor.aa2b65d6f4254c3f19d5.js"></script>
+		<script type=text/javascript src="/parking2/static/computer/js/app.789c70f0d3cdee382440.js"></script>
+	</body>
 </html>
