测试接口-保存进度

--- a/appweb/templates/computer/index.html
+++ b/appweb/templates/computer/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset=utf-8>
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <title>云亭2.0</title>
-    <link href=/parking2/static/computer/css/app.721ceaacd55525603a3f23444f0aed7b.css rel=stylesheet>
-</head>
-<body>
-<div id=app></div>
-<script type=text/javascript src=/parking2/static/computer/js/manifest.2f093d01eea3bc81631f.js></script>
-<script type=text/javascript src=/parking2/static/computer/js/vendor.38202088b00e09ae2e9a.js></script>
-<script type=text/javascript src=/parking2/static/computer/js/app.ca71562c04092ce515bd.js></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>云亭2.0</title><link href=/parking2/static/computer/css/app.7d2306d31adc8f50ce72faf68b7133ac.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/parking2/static/computer/js/manifest.14e6fb2d1c9b9982d00f.js></script><script type=text/javascript src=/parking2/static/computer/js/vendor.8a3cc6c64fb42e1237e1.js></script><script type=text/javascript src=/parking2/static/computer/js/app.36cf0efb8997f36c5ab3.js></script></body></html>
